2006-08-07  Quentin Mathe <qmathe@club-internet.fr>
    
    * setup.sh: Replaced incorrect reference EtoileWildMenus by 
    EtoileMenus.bundle in GSAppKitUserBundles, this allows EtoileWildMenus 
    bundle to be loaded now. Added code to remove repeated slash in 'bundledir'
    path, 'defaults' command was stumbling on it. 
    Improved to take in account when the bundles have been installed in the 
    user Library (well, logically when setup.sh is run without sudo or root 
    permissions).

2006-08-07  Quentin Mathe <qmathe@club-internet.fr>
    
    * setup.sh:
    * setdown.sh:
    Major update to setup related scripts, setup.sh now includes the 
    possibility to choose between a user deployment (without any privileges) 
    and a system deployment (with sudo access or root).
    Futhermore it takes now care to set the necessary defaults for bundles like
    Camaelon and EtoileWildMenus (the update occurs in the defaults of the user
    account which runs the script). By the way, the script handles Nesedah theme
    deployment too.
    setdown.sh has been updated in a symetric way allowing to revert from 
    setup.sh effect.

2006-08-06  Quentin Mathe <qmathe@club-internet.fr>
    
    * setup.sh: New postinstall script which links or copies some stuff at the 
    right locations to make Etoile first use a straightforward experience and 
    not a nightmare anymore :-).
    * setdown.sh: New uninstall script to reverse the effect of setup.sh.

2006-06-05  Quentin Mathe <qmathe@club-internet.fr>

    * Frameworks/GNUmakefile: Updated to include XWindowServerKit in the build
    process.

2006-05-11  Nicolas Roard <nicolas@roard.com>

    * Themes/Nesedah: Created the Themes directory and imported
    the last version of the Nesedah theme.

2006-02-16  Yen-Ju <yjchenx at gmail>

    * Frameworks/GNUmakefile:
    Do not compile ServicesBarKit on mac. 

2006-02-16  Quentin Mathe <qmathe@club-internet.fr>
    
    * ANNOUNCE: Added Etoile 0.1 press release.
